--- a/frontend/src/components/rightbar/rightbar.css
+++ b/frontend/src/components/rightbar/rightbar.css
@@ -73,3 +73,47 @@
 .rightbarusername{
     font-weight: 500;
 }
+
+.rightbartitle{
+    font-size: 18px;
+    font-size: 500;
+    margin-bottom: 10px;
+}
+.rightbarinfo{
+    margin-bottom: 30px;
+}
+.rightbarinfoitem{
+    margin-bottom: 10px;
+}
+
+.rightbarinfokey{
+    font-weight: 500;
+    margin-right: 15px;
+    color: #555;
+}
+
+.rightbarinfovalue{
+    font-weight: 300;
+}
+
+.rightbarfollowings{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+.rightbarfollowing{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.rightbarfollowingimg{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px;
+
+}
