--- a/frontend/src/pages/login/login.css
+++ b/frontend/src/pages/login/login.css
@@ -54,6 +54,10 @@
     outline: none;
 }
 
+.loginbutton:disabled{
+    cursor:not-allowed;
+}
+
 .loginbutton{
     height: 50px;
     border-radius: 10px;
